src/test/ui/type-alias-impl-trait/generic_different_defining_uses.min_tait.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_different_defining_uses.rs:14:1
   |
LL | fn my_iter2<T>(t: T) -> MyIter<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `std::iter::Once<T>`, got `std::option::IntoIter<T>`
   |
note: previous use here
  --> $DIR/generic_different_defining_uses.rs:10:1
   |
LL | fn my_iter<T>(t: T) -> MyIter<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

